--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,11 @@ body {
 	padding: 0;
 }
 
+h2 {
+	font-size: 14px;
+	font-style: italic;
+}
+
 a:link, a:visited {
 	color: #292929;
 	text-decoration: none;
@@ -21,15 +26,47 @@ a:active, a:hover {
 section#container {
 	margin: auto;
 	width: 960px;
-	background-color: #47FFC2;
-	/*border-right: 1px solid #47FFC2;*/
+	height: 640px;
+	/*background-color: rgba(71,255,194,0.5);*/
+	position: relative;
+	-webkit-transition: 1s left linear;
+}
+
+#container section.wall {
+	width: 960px;
+	border: 1px dashed #47FFC2;
+	position: absolute;
+	top: 0;
+}
+
+#welcome {
+	height: 600px;
+	background: transparent url(../images/socket.png) no-repeat left bottom;
+}
+
+#previous, #next {
+	font-size: small;
+	position: fixed;
+	top: 360px;
+	width: 80px;
+	display: none;
+}
+
+#previous {
+	left: 140px;
+	text-align: right;
+}
+
+#next {
+	right: 140px;
+	text-align: left;
 }
 
 footer {
 	font-size: small;
-	margin: 1em 0px 0px 0px;
-	width: 100%;
-	height: 200px;
+	margin: 3em 0px 0px 0px;
+	width: 200%;
+	height: 148px;
 	overflow: hidden;
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(80%,#eeeeee), color-stop(100%,#e0e0e0));
 }
@@ -40,8 +77,10 @@ footer {
 	background: #cdb192 url(../images/floor_tile.png) repeat left top;
 	background-size: 42px 42px;
 	-webkit-transform: rotateX(45deg);
+	width: 100%;
 	height: 300px;
-	padding-top: 48px;
+	padding-top: 30px;
+	line-height: 24px;
 	position: relative;
 	top: -1.5em;
 }
