--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,8 @@ a:active, a:hover {
 	color: #887491;
 }
 
-section#container {
-	margin: auto;
+#container {
+	margin: 20px auto 0 auto;
 	width: 960px;
 	height: 640px;
 	/*background-color: rgba(71,255,194,0.5);*/
@@ -34,9 +34,13 @@ section#container {
 
 #container section.wall {
 	width: 960px;
-	/*border: 1px dashed #47FFC2;*/
 	position: absolute;
 	top: 0;
+}
+
+section.wall:not(#welcome) {
+	box-shadow: 0px 8px 8px #ddd;
+	background-color: white;
 }
 
 #welcome {
@@ -45,8 +49,9 @@ section#container {
 }
 
 #welcome p {
-	width: 840px;
+	width: 700px;
 	line-height: 1.5em;
+	font-size: small;
 	margin: 1em auto;
 	text-align: justify;
 }
@@ -72,7 +77,7 @@ section#container {
 footer {
 	font-size: small;
 	margin: 3em 0px 0px 0px;
-	width: 200%;
+	width: 100%;
 	height: 148px;
 	overflow: hidden;
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(80%,#eeeeee), color-stop(100%,#e0e0e0));
